# CZ4R

./: .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  database.db  docker-compose.yml  sqlx-data.json  tree  update.sh
.devcontainer/: .bash_aliases  .env  .env.template  Dockerfile  devcontainer.json  docker-compose.yml  ps1.bash
.devcontainer/.githooks/: pre-commit
.sqlx/: query-03d4d6b584ed5ae5364f1773a480b413c4c3ce402f650775ce64118a09b2ce28.json  query-040e2654c4eb152d1832d2259aed71f0b3eaf57ecc7b3a50c26e84f46df40260.json  query-06d45f82ac0e662d2cd2c8a1a2e8e7f4f98e28daa5ee0b4068f6644018795fca.json  query-10402b37695fac1e03a79f0819a94db3fb00f4b8605e2ca03ea7012603340c34.json  query-1898025743601ea8ecbcda017979a1cf15ab6d6de23309385308b404169acb8a.json  query-290bed8259ae9b0c3883c50ceaf8b9c0480aef6f7592978c02b78287618bfa60.json  query-3a9eaafec98c37585261f20d1dcf58077bb69980185f6dd0ae0ae486185fd511.json  query-41a27ea8a21c6a8d82ad15bc0cb97c937bb8ebccf8f3120712507231a349089e.json  query-41a5df4a38b854b83fd2402cb3b16a28d151343b153451a6a55c6d2543e75d6a.json  query-4511068048d171d71fcc2e4dd1a317e15caa28664b8738e575a9004781ade556.json  query-507f39a16a794e6727b49c4dc38503663412eb54a177e13a619b3cab48104ef5.json  query-5a7c8d6d44e9b470ffd0b5486081d95332c9b4b68a49bc0051b72452acbaf5dc.json  query-6250d3657289880f75a247502749e19ca2e7272b6243e4e421fd0aee026ee42c.json  query-65363999957f702e02bf8229c94e0a5fec7f4ffa2131004d40b21105224f0f94.json  query-6b1b358b19615fc5ba50b7dcf0eeb5b9f453b071b7273a335d6b98840bd32b2a.json  query-7609165d94c8f1bea9d535b9b7ad727fd06592973d7f83017292d41acb203be6.json  query-76d6c0dd68dd90a7fbd909a11441b09317d5e8d57a54995cfdbe6a0c0c4a0232.json  query-7da38b13b9633502eb3a4e951d2374197737cab7812f9ba671e84c17f284d70a.json  query-839a98ffaff694b0ea2698f15ceeedce5f3dc430d3ad260456a4f0acf8dab4fe.json  query-88daa2cc4300c1b17640c6c3dbcdb8f82803b9ace2c7e04d41ed3d12ca09d0f8.json  query-8d5ad26f003e5c9e3981fc447ed387102520078c368cdc663c9924690e93c67f.json  query-a41dad7329388f82f984db5c2eb76c0ad1e5e9654ffb2f04e2b519c4219d1d74.json  query-a7fe8f3b1999281257796ba466ec868a547f9866e51e3d38b3796d29ae42ff25.json  query-ac3722dfad2ea4515526e95a38e7e85251f59efcedb9852e98ea7a00d73d163a.json  query-afeb5a65216d2881f60fc817e75a6de36a37bce5f93d8ab12a6d723a960f2b54.json  query-b14ed7b5b7ba63982ad3435055c90bd8ed028fd6a7c4711b60606a9442c4ad7c.json  query-b39aa561903f612f2a6b0b90bc49ec3968044845fca2edf442dd0617daaf58fb.json  query-b48c93d50e49e0e5a63bc44b466419ea249a8cc132c2f80bcf520b7ab00cc4cf.json  query-b4d9e32b4f286a3242f4916d9b61fca998dbd4e21627c0b16716e17bf74c9912.json  query-b79796bbb764e0eb88f00e2f2b2000bbb3698d773bd9a8119799d6875b46c2de.json  query-b7c3b30f2e5e17978e8818f6d46dd6de9007884bb133aac4e56b6ea334786b35.json  query-b9a46c332d8c19c9bcb09dff42d75c27c45957e0a4f63f0c61da4ffd2f368dcc.json  query-c8b8e2868ba81d207354b088d17f0349bc32556c37fc409761538d693ab7083f.json  query-cbe0f5dc4b77fdddf0290a8d08dce124aa5a3cdcd6d5f2a7e761a9eca6e145a4.json  query-ce17705479fbb8cc40585477f9286f19d866ff3827b560a94caff2a5dd3127f3.json  query-d432764c31234838de704d133dd0d8bc8589c4ae164f0a75e49e75f133c03cf4.json  query-d5d49927d2bd5f38531e4e314772e8a9ca7886922c56f9c39abc8258957e14b9.json  query-d79c6edcee9c50cf686cbc44103cd670ac3d99dc507fa532ecfd1867144a61e5.json  query-e77b2d2624f058d101ca451f938144f924063b0f926ddf5c66c93df79fbed65c.json  query-ea199f0b573f0ab557c5f708be837cd4b00cba3eaa83802de6f587f053c5b492.json  (+2 more)
app/: Cargo.toml  build.rs
app/hb-templates/: admin.hbs  base.hbs  card.hbs  changepw.hbs  checkinout.hbs  error404.hbs  header.hbs  home.hbs  jobedit.hbs  joblist.hbs  userselect.hbs  workerdata.hbs  workeredit.hbs
app/queries/: fortunes.sql
app/src/: change_pw.rs  change_worker.rs  checkinout.rs  config.rs  create_worker.rs  errors.rs  index.rs  jobedit.rs  joblist.rs  login.rs  main.rs  workerdata.rs  workeredit.rs
app/templates/: admin.rs.html  base.rs.html  card.rs.html  changepw.rs.html  checkinout.html  checkinout.rs.html  deactivatedworkers.rs.html  error404.rs.html  footer.rs.html  header.rs.html  home.rs.html  index.rs.html  jobedit.rs.html  joblist.rs.html  list.rs.html  login.rs.html  userselect.rs.html  workerdata.rs.html  workeredit.rs.html
db/: schema.sql
hb-templates/: admin.hbs  base.hbs  card.hbs  changepw.hbs  checkinout.hbs  error404.hbs  errorauth.hbs  footer.hbs  home.hbs  jobedit.hbs  joblist.hbs  login.hbs  restore.hbs  userselect.hbs  workerdata.hbs  workeredit.hbs
migrations/: 20230513081206_users.sql  20230513164926_add-salt.sql  20230513201758_unique-username.sql  20230520165919_job.sql  20230520174828_jobworker.sql  20230529172951_complete-worker-data.sql  20230529203121_change-pw.sql  20230529223535_flat-rate.sql  20230605052541_usingflatrate.sql  20230605062115_servicecode.sql  20230605095938_jobworker-info.sql  20230610212920_fix-datatype.sql  20230709012437_job-notes.sql  20230917175950_delete-workers.sql  20230917180310_undo-jw-mistake.sql  20230917180349_delete-workers-forreal.sql  20250128202523_log_out_field_for_users.sql
src/: admin.rs  change_pw.rs  change_worker.rs  checkinout.rs  config.rs  create_worker.rs  deactivate.rs  error404.rs  errors.rs  export_db.rs  index.rs  jobedit.rs  joblist.rs  login.rs  main.rs  reset_pw.rs  restore.rs  shutdown.rs  static.rs  workerdata.rs  workeredit.rs
static/: site.webmanifest
tmp/devcontainers-f5facf9f-975f-40cc-9bb4-bd077a2fce3d1676105231677/: env-loginInteractiveShell.json
