[package]
name = "cz4r"
version = "1.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7", features = ["form", "macros"]}
tower = "0.5"
tower-http = {version = "0.5.2", features = ["trace"]}
axum-login = "0.15"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls" , "postgres", "time",] }
time = {version = "0.3", features = ["serde", "local-offset"]}
futures = "0.3"
rand = "0.8"
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
base64 = "0.22"
webpki-roots = "0.26"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tracing = "0.1"
scrypt = "0.11"
password-hash = {version = "0.5.0", features = ["rand_core"]}
rust_decimal = "1"
axum-template = {version = "2", features = ["handlebars"]}
handlebars = {version = "6", features = ["dir_source", "rust-embed"]}
rust-embed = "8"
serde_json = "1.0"
secrecy = "0.8"
anyhow = "1.0.86"
thiserror = "1.0"
itertools = "0.13.0"

[profile.dev.package."*"]
opt-level = 3

