[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
cornucopia_async = "0.4.0"
deadpool-postgres = "0.10.3"
futures = "0.3.25"
postgres-types = "0.2.4"
rustls = "0.20.7"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.7"
tokio-postgres-rustls = "0.9.0"
webpki-roots = "0.22.6"

[build-dependencies]
cornucopia = "0.9.0"
postgres = "0.19.4"
ructe = { version = "0.15.0", features = ["mime03"] }
