[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6", features = ["form", "macros"]}
axum-login ={ version = "0.5.0", features = ["sqlx", "postgres"]}
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "postgres"] }
futures = "0.3.25"
rand = "0.8"
rustls = "0.20.7"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }

webpki-roots = "0.22.6"

[build-dependencies]

ructe = { version = "0.16.1", features = ["mime03"] }
